# adbchelper

./: .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
docs/: architecture.md  roadmap-10-weeks.md
scripts/: build-win-gnu.sh  prepare-webview2-fixed.sh
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: hardening.rs  lib.rs  main.rs
src-tauri/src/commands/: app.rs  approvals.rs  chat.rs  investigations.rs  kubernetes.rs  logs.rs  mod.rs  nacos.rs  redis.rs  settings.rs  ssh.rs  tidb.rs
src-tauri/src/llm/: qwen.rs
src-tauri/src/models/: app_health.rs  approval.rs  chat.rs  connection_profile.rs  environment.rs  investigation.rs  kubernetes.rs  logs.rs  mod.rs  nacos.rs  redis.rs  ssh.rs  tidb.rs
src-tauri/src/orchestrator/: chat.rs  kubectl.rs  kubernetes.rs  logs.rs  mod.rs  nacos.rs  redis.rs  ssh.rs  ssh_tools.rs  tidb.rs
src-tauri/src/storage/: app_log.rs  db.rs  mod.rs  secrets.rs
src/components/: SectionCard.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  separator.tsx  textarea.tsx
src/features/approvals/: ApprovalsPage.tsx
src/features/chat/: ChatPage.tsx
src/features/investigations/: InvestigationsPage.tsx
src/features/resources/: ResourcesPage.tsx
src/features/settings/: SettingsPage.tsx
src/lib/: tauri.ts
src/types/: domain.ts
tools/: README.md
