[package]
name = "adbchelper"
version = "0.1.0"
description = "Desktop ops copilot for Kubernetes, servers, and office efficiency workflows."
authors = ["yangxu"]
edition = "2021"

[lib]
name = "adbchelper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.4", features = [] }

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
keyring = "3.6.3"
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tauri = { version = "2.1.1", features = [] }
thiserror = "2.0.3"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
